backend/k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      containers:
        - name: admin-service
          image: testxxboy/biday-admin-service:1.0
          ports:
            - containerPort: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  type: ClusterIP
  ports:
    - port: 9100
      targetPort: 9100
  selector:
    app: admin-service
