backend/k8s/auction.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-deploy
  namespace: biday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auction
  template:
    metadata:
      labels:
        app: auction
    spec:
      containers:
        - name: auction
          image: hwijae/biday-auction-service:1.5
          ports:
            - containerPort: 9101
---
apiVersion: v1
kind: Service
metadata:
  name: auction-service
  namespace: biday
spec:
  type: ClusterIP
  selector:
    app: auction
  ports:
    - port: 9101
      targetPort: 9101
