backend/k8s/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-deploy
  namespace: biday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: hwijae/biday-eureka-server:3.0
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: biday
spec:
  type: ClusterIP
  selector:
    app: eureka
  ports:
    - port: 8761
      targetPort: 8761
