backend/k8s/ftp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftp-deploy
  namespace: biday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ftp
  template:
    metadata:
      labels:
        app: ftp
    spec:
      containers:
        - name: ftp
          image: hwijae/biday-ftp-service:1.5
          ports:
            - containerPort: 9102

---
apiVersion: v1
kind: Service
metadata:
  name: ftp-service
  namespace: biday
spec:
  type: ClusterIP
  selector:
    app: ftp
  ports:
    - port: 9102
      targetPort: 9102
