backend/k8s/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deploy
  namespace: biday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: hwijae/biday-product-service:1.5
          ports:
            - containerPort: 9104

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: biday
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
    - port: 9104
      targetPort: 9104
